fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -14,42 +14,42 @@ h1 {
   position: absolute;
   top: 1%;
   left: 38%;
-  font-size: 40px;
+  font-size: 36px;
   font-family: 'Bungee Shade', cursive;
 }
 
 #logo {
-  height: 120px;
-  width: 650px;
+  height: 110px;
+  width: 580px;
   z-index: 4;
   position: relative;
 }
 
 main {
-  height: 525px;
+  height: 510px;
   background: url("img/stars.png");
   background-size: cover;
   text-align: center;
-  border: 5px solid black;
 }
 
 .sides {
-  height: 400px;
+  height: 80%;
+  width: 15%;
   margin: 0 20px;
   text-align: center;
   display: inline-block;
   background-color: #0f0f0f;
   vertical-align: top;
   border: 5px solid #232323;
-  border-radius: 8%;
+  border-radius: 10px;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
 
 #canvasDiv {
-  height: 525px;
-  width: 850px;
+  height: 500px;
+  width: 800px;
   margin: 0 auto;
   text-align: center;
   display: inline-block;
@@ -59,7 +59,7 @@ main {
 canvas {
   border: 1px solid #0f0f0f;
   background-color: black;
-  border-radius: 5%;
+  border-radius: 10px;
   border: 5px solid black;
   outline: none;
   z-index: 1;
@@ -67,7 +67,7 @@ canvas {
 
 .blackDisplays {
   height: 50px;
-  width: 250px;
+  width: 100%;
   background-color: #000000;
   position: relative;
   top: 10%;
@@ -75,7 +75,7 @@ canvas {
   padding: 10px 0;
   font-family: 'Press Start 2P', cursive;
   color: #44E547;
-  font-size: 15px;
+  font-size: 10px;
   text-shadow: 0 0 0.2em #8F7;
   line-height: 1.5
 }
@@ -113,7 +113,7 @@ footer {
 
 #notification {
   height: 30px;
-  width: 300px;
+  width: 23%;
   background-color: black;
   z-index: 3;
   position: fixed;
@@ -125,7 +125,7 @@ footer {
   font-family: 'Press Start 2P', cursive;
   text-shadow: 0 0 0.5em #8F7;
   border: 2px dotted #8F7;
-  border-radius: 5%;
+  border-radius: 10px;
   text-align: center;
   vertical-align: middle;
   padding: 10px;
